[gd_scene load_steps=10 format=3 uid="uid://cowmy6bfdeu1y"]

[ext_resource type="FontFile" uid="uid://uqul8vhiuauj" path="res://assets/FORCED SQUARE.ttf" id="1_7im46"]
[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_782nj"]
[ext_resource type="Texture2D" uid="uid://bl2ij3tb0mln5" path="res://assets/sound slider/slider3.png" id="3_8nrnh"]
[ext_resource type="Texture2D" uid="uid://bkfy6lnwqw1ok" path="res://assets/sound slider/slider.png" id="4_ufmpy"]
[ext_resource type="Texture2D" uid="uid://b3lbqhos52dab" path="res://assets/sound slider/slider2.png" id="5_llhcm"]
[ext_resource type="AudioStream" uid="uid://co35kj5kmx8td" path="res://assets/sounds/Startmusic.ogg" id="6_ryun3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_klbb2"]
content_margin_top = 20.0
texture = ExtResource("4_ufmpy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_or6kn"]
texture = ExtResource("5_llhcm")
modulate_color = Color(1, 1, 1, 0.54902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kj3q5"]
texture = ExtResource("5_llhcm")
modulate_color = Color(1, 1, 1, 0.54902)

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_782nj")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 0.898039)

[node name="Paused" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.0
offset_top = 100.0
offset_right = 57.0
offset_bottom = 129.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_7im46")
theme_override_font_sizes/font_size = 35
text = "Paused"

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Volume" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7im46")
theme_override_font_sizes/font_size = 25
text = "Volume"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VolumeSlider" type="HSlider" parent="CenterContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("3_8nrnh")
theme_override_icons/grabber_highlight = ExtResource("3_8nrnh")
theme_override_styles/slider = SubResource("StyleBoxTexture_klbb2")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_or6kn")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_kj3q5")
min_value = -10.0
max_value = 20.0
value = 10.0

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_ryun3")
volume_db = -20.0
parameters/looping = true

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="value_changed" from="CenterContainer/MarginContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
